@@ -12,7 +12,7 @@ node_stack_bottom01 = 0.0, 0, 0, 0.0, -1.0, 0.0
 
 TechRequired = advScienceTech
 entryCost = 20000
-cost = 10000
+cost = 25000
 category = Science
 subcategory = 0
 title = Deep Space Telescope
