@@ -12,7 +12,7 @@ node_stack_bottom = 0.0, -0.127145, -0.1118595, 0.0, -1.0, 0.0
 
 TechRequired = scienceTech
 entryCost = 10000
-cost = 5000
+cost = 10000
 category = Science
 subcategory = 0
 title = Space Telescope
