@@ -1,5 +1,8 @@
 ﻿V6.4 "ResearchBodies 1.8"
 	Compatible version for integration with ResearchBodies V1.8.
+	Re-balanced price of Telescopes to take into account the cost of the ResearchBodies and Asteroid Day infrared telescopes.
+	The small telescope now costs 10,000 (was 5,000) - entry price is still 5,000.
+	The advanced telescope now costs 25,000 (was 10,000) - entry price is still 10,000.
 V6.3 "More Kopernicus - New Horizons"
 	Added support for New Horizons Kopernicus planet mod.
 	Changed Reputation for contracts to be related to distance from home world, rather than the planet order from the Sun.
